Changed how the pose is visulized and Updated the IRIS_marker_positions to new led setup

--- a/monocular_pose_estimator/marker_positions/IRIS_marker_positions.yaml
+++ b/monocular_pose_estimator/marker_positions/IRIS_marker_positions.yaml
@@ -1,15 +1,29 @@
 # The marker positions in the trackable's frame of reference:
-#
+#OLD
+#marker_positions:
+#  - x: -0.0900000
+#    y: 0.1220000
+#    z: 0.0000000
+#  - x: 0.1080000
+#    y: 0.1860000
+#    z: 0.0300000
+#  - x: 0.0780000
+#    y: -0.1010000
+#    z: 0.0000000
+#  - x: -0.1010000
+#    y: -0.1790000
+#    z: 0.0150000
+#NEW
 marker_positions:
-  - x: -0.0900000
-    y: 0.1220000
+  - x: 0.1050000
+    y: -0.1750000
+    z: -0.0300000
+  - x: 0.0770000
+    y: 0.1020000
     z: 0.0000000
-  - x: 0.1080000
-    y: 0.1860000
-    z: 0.0300000
-  - x: 0.0780000
-    y: -0.1010000
+  - x: -0.1000000
+    y: 0.1385000
+    z: -0.0150000
+  - x: -0.0925000
+    y: -0.1210000
     z: 0.0000000
-  - x: -0.1010000
-    y: -0.1790000
-    z: 0.0150000
